# retro-metadata

./: .gitignore  README.md  go.mod  go.sum  pyproject.toml
.github/workflows/: ci.yml
cpp/: .clang-format  .clang-tidy  CMakeLists.txt
cpp/cmake/: retro_metadata-config.cmake.in
cpp/examples/: CMakeLists.txt
cpp/examples/basic_search/: main.cpp
cpp/examples/filename_parsing/: main.cpp
cpp/examples/identify_game/: main.cpp
cpp/examples/multi_provider/: main.cpp
cpp/examples/with_cache/: main.cpp
cpp/include/retro_metadata/: config.hpp  errors.hpp  retro_metadata.hpp  types.hpp
cpp/include/retro_metadata/cache/: cache.hpp  memory.hpp
cpp/include/retro_metadata/filename/: filename.hpp
cpp/include/retro_metadata/internal/: matching.hpp  normalization.hpp
cpp/include/retro_metadata/platform/: mapping.hpp  slug.hpp
cpp/include/retro_metadata/provider/: base.hpp  provider.hpp  registry.hpp
cpp/src/: config.cpp  errors.cpp  types.cpp
cpp/src/cache/: memory.cpp
cpp/src/filename/: filename.cpp
cpp/src/internal/: matching.cpp  normalization.cpp
cpp/src/platform/: mapping.cpp  slug.cpp
cpp/src/provider/: base.cpp  flashpoint.cpp  gamelist.cpp  hasheous.cpp  hltb.cpp  igdb.cpp  launchbox.cpp  mobygames.cpp  playmatch.cpp  registry.cpp  retroachievements.cpp  screenscraper.cpp  steamgriddb.cpp  thegamesdb.cpp
cpp/tests/: CMakeLists.txt  test_cache.cpp  test_filename.cpp  test_matching.cpp  test_normalization.cpp  test_platform.cpp  test_providers.cpp
cpp/tests/testutil/: loader.hpp
docs/: index.md
docs/architecture/: caching.md  library.md  overview.md  providers.md
docs/development/: migration.md
docs/guides/: caching.md  filename-parsing.md  platforms.md  quickstart.md
examples/basic_search/: main.go  main.py
examples/filename_parsing/: main.go  main.py
examples/identify_game/: main.go  main.py
examples/multi_provider/: main.go  main.py
examples/with_cache/: main.go  main.py
migration/: file_map.yaml
pkg/cache/: cache.go  memory.go  memory_test.go
pkg/filename/: filename.go  filename_test.go
pkg/internal/hashing/: hashing.go
pkg/internal/matching/: matching.go  matching_test.go
pkg/internal/normalization/: normalization.go  normalization_test.go
pkg/platform/: mapping.go  mapping_test.go  slug.go
pkg/provider/: integration_test.go  provider.go  registry.go
pkg/provider/flashpoint/: flashpoint.go
pkg/provider/gamelist/: gamelist.go
pkg/provider/hasheous/: hasheous.go
pkg/provider/hltb/: hltb.go
pkg/provider/igdb/: igdb.go
pkg/provider/launchbox/: launchbox.go
pkg/provider/mobygames/: mobygames.go
pkg/provider/playmatch/: playmatch.go
pkg/provider/retroachievements/: retroachievements.go
pkg/provider/screenscraper/: screenscraper.go
pkg/provider/steamgriddb/: steamgriddb.go
pkg/provider/thegamesdb/: thegamesdb.go
pkg/retrometadata/: client.go  config.go  errors.go  types.go
pkg/testutil/: loader.go
scripts/: sync_upstream.py
src/retro_metadata/: __init__.py
src/retro_metadata/artwork/: __init__.py  cache.py  config.py  downloader.py  exceptions.py  utils.py
src/retro_metadata/cache/: __init__.py  base.py  memory.py  redis.py  sqlite.py
src/retro_metadata/core/: __init__.py  client.py  config.py  exceptions.py  hashing.py  matching.py  normalization.py
src/retro_metadata/providers/: __init__.py  base.py  flashpoint.py  gamelist.py  hasheous.py  hltb.py  igdb.py  launchbox.py  mobygames.py  playmatch.py  retroachievements.py  screenscraper.py  steamgriddb.py  thegamesdb.py
src/retro_metadata/types/: __init__.py  common.py  hltb.py  igdb.py  mobygames.py  retroachievements.py  screenscraper.py  steamgriddb.py
src/retro_metadata/utils/: __init__.py  filename.py  hashing.py
testdata/cache/: memory_cache.json
testdata/filename/: clean_filename.json  extract_region.json  extract_tags.json  get_file_extension.json  is_bios_file.json  is_demo_file.json  is_unlicensed.json  parse_no_intro_filename.json
testdata/fixtures/igdb/: game_1074.json  search_mario.json
testdata/fixtures/mobygames/: game_564.json  search_zelda.json
testdata/matching/: find_best_match.json  jaro_winkler_similarity.json
testdata/normalization/: normalize_search_term.json  split_search_term.json
testdata/platform/: get_igdb_platform_id.json  get_mobygames_platform_id.json  get_platform_info.json  get_retroachievements_platform_id.json  get_screenscraper_platform_id.json
testdata/schemas/: testdata.schema.json
tests/: conftest.py  test_filename.py  test_matching.py  test_normalization.py  test_platform_mappings.py  test_provider_integration.py
tests/helpers/: __init__.py  test_data_loader.py
tests/test_cache/: __init__.py  test_memory.py
