[project]
name = "retro-metadata"
version = "1.0.0"
description = "A comprehensive metadata scraping library for retro video games"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Jose Gonzalez", email = "jose@josegonzalez.io" }
]
keywords = [
    "retro",
    "gaming",
    "metadata",
    "igdb",
    "mobygames",
    "screenscraper",
    "retroachievements",
    "emulation",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "aiohttp>=3.9",
    "httpx>=0.27",
    "strsimpy>=0.2",
    "unidecode>=1.3",
    "pydash>=7.0",
    "yarl>=1.9",
]

[project.optional-dependencies]
redis = ["redis>=5.0"]
sqlite = ["aiosqlite>=0.19"]
all = ["redis>=5.0", "aiosqlite>=0.19"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "pytest-vcr>=1.0",
    "mypy>=1.8",
    "ruff>=0.2",
    "pre-commit>=3.6",
]

[project.urls]
Homepage = "https://github.com/josegonzalez/retro-metadata"
Documentation = "https://github.com/josegonzalez/retro-metadata#readme"
Repository = "https://github.com/josegonzalez/retro-metadata.git"
Issues = "https://github.com/josegonzalez/retro-metadata/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/retro_metadata"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
exclude = ["tests/"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["retro_metadata"]

[tool.coverage.run]
source = ["src/retro_metadata"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
